--- a/Mijn Project/src/style.css
+++ b/Mijn Project/src/style.css
@@ -47,6 +47,7 @@ header{
 
 #navigatie li a{
   color: #d5c4b1;
+  text-decoration: none;
 }
 
 #navigatie li:hover, 
@@ -155,8 +156,7 @@ p{
 /*Images: */
 
 #pokemon-all{
-  display: flex;
-  position: relative;
+  
 }
 
 #pokemon-logo{
@@ -174,6 +174,15 @@ p{
 
 /**/
 
+#backtotop{
+  color: #947755;
+  display: flex;
+  justify-content: center;
+  font-size: 24px;
+  margin-bottom: 20px;
+  padding: 0;
+}
+
 footer{
   text-align: center;
   border: 1px #382832 solid;
@@ -190,7 +199,8 @@ footer{
 
 .item-one, .item-two, .item-three, .item-four, .item-five{
   border: 5px #624e75 solid;
-  border-radius: 5px;
+  background-color:#9b89a9;
+  border-radius: 10px;
   padding: 5px;
   margin: 5px;
   margin-bottom: 30px;
@@ -205,4 +215,3 @@ footer{
   margin: -30px;
   margin-top: 10px;
 }
-
