--- a/Mijn Project/src/style.css
+++ b/Mijn Project/src/style.css
@@ -57,6 +57,15 @@ header{
 
 /**/
 
+#intro{
+  display: flex;
+}
+
+#test{
+  margin: -30px;
+  margin-top: 10px;
+}
+
 #search {
   border: 2px #624e75 solid;
   border-radius: 20px;
@@ -124,6 +133,12 @@ button {
 
 /**/
 
+.list{
+  display: flex;
+  justify-content:space-around;
+  margin: 0 10px;
+}
+
 /*Misschien hier foto plaatsen van pokemon die piept*/
 .pokemon-list{
   border: 1px #382832 solid;
@@ -140,6 +155,25 @@ button {
 
 .pokemon-list, .FAVORIETEN{
   color: #d5c4b1;
+}
+
+.item-one, 
+.item-two, 
+.item-three, 
+.item-four, 
+.item-five{
+  border: 5px #624e75 solid;
+  background-color:#9b89a9;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 5px;
+  margin-bottom: 30px;
+  width: 100%;
+}
+
+.favorites{
+  display: flex;
+  justify-content: flex-end;
 }
 
 /**/
@@ -175,14 +209,7 @@ p{
 /**/
 
 /* Knop toegevoegd om direct boven de pagina te belanden */
-#backtotop{
-  color: #947755;
-  display: flex;
-  justify-content: center;
-  font-size: 24px;
-  margin-bottom: 20px;
-  padding: 0;
-}
+
 
 footer{
   text-align: center;
@@ -192,33 +219,11 @@ footer{
   color: #d5c4b1;
 }
 
-.list{
+#backtotop{
+  color: #947755;
   display: flex;
-  justify-content:space-around;
-  margin: 0 10px;
-}
-
-.item-one, .item-two, .item-three, .item-four, .item-five{
-  border: 5px #624e75 solid;
-  background-color:#9b89a9;
-  border-radius: 10px;
-  padding: 5px;
-  margin: 5px;
-  margin-bottom: 30px;
-  width: 100%;
-}
-
-#intro{
-  display: flex;
-}
-
-#test{
-  margin: -30px;
-  margin-top: 10px;
-}
-
-
-.favorites{
-  display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+  font-size: 24px;
+  margin-bottom: 20px;
+  padding: 0;
 }
