Afbeelding boven de footer geplaatst en juiste css geschreven

--- a/Mijn Project/src/style.css
+++ b/Mijn Project/src/style.css
@@ -191,6 +191,10 @@ p{
 /*Images: */
 
 #pokemon-all{
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  top: 55px;
 }
 
 #pokemon-logo{
