--- a/Mijn Project/src/style.css
+++ b/Mijn Project/src/style.css
@@ -167,7 +167,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 80px 40px;
+  margin: 30px 40px 80px 40px;
   border-radius: 10px;
   gap: 20px;
 }
