--- a/Mijn Project/src/style.css
+++ b/Mijn Project/src/style.css
@@ -268,6 +268,13 @@ h1{
   margin-left: 30px;
 }
 
+h2{
+  display: flex;
+  justify-content: center;
+  border: 3px #2d1b13 solid;
+  border-radius: 70px;
+}
+
 p{
   font-size: 24px;
   color: #d5c4b1;
@@ -322,4 +329,8 @@ footer p{
 
 #backtotop:hover{
   color:#352247;
+}
+
+.info{
+  padding-left: 5px;
 }
