Kleur van de button verandert

--- a/Mijn Project/src/style.css
+++ b/Mijn Project/src/style.css
@@ -190,7 +190,7 @@ button {
 #next-btn{
   margin-top: 10px 20px;
   padding: 20px;
-  background-color: #624e75;
+  background-color: #352247;
   border: none;
   border-radius: 10px;
   cursor: pointer;
