Border van de kaarten aangepast

--- a/Mijn Project/src/style.css
+++ b/Mijn Project/src/style.css
@@ -254,6 +254,10 @@ th:nth-child(6){
   border-bottom: transparent;
 }
 
+p.info{
+  border: transparent;
+}
+
 /*Lijst met de Pokemons en de favorieten*/
 
 .list{
