--- a/Mijn Project/src/style.css
+++ b/Mijn Project/src/style.css
@@ -210,7 +210,8 @@ button {
   font-size: 50px;
 }
 
-/**/
+/*Sorteren en filteren*/
+
 #filters{
   display: flex;
   justify-content: space-evenly;
