--- a/Mijn Project/src/style.css
+++ b/Mijn Project/src/style.css
@@ -421,3 +421,10 @@ footer p{
 .info{
   padding-left: 5px;
 }
+
+@media screen and (max-width: 750px) {
+  #pokemon-card{
+    width: 750px;
+  }
+  
+}
